--- a/django_pos/templates/customers/vendors_list.html
+++ b/django_pos/templates/customers/vendors_list.html
@@ -1,7 +1,7 @@
 {% extends "pos/base.html" %}
 {% load static %}
 <!-- Page title  -->
-{% block title %}Products{% endblock title %}
+{% block title %}Vendors{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
@@ -11,7 +11,7 @@
 {% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Products{% endblock heading %}
+{% block heading %}Vendors{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
@@ -31,12 +31,12 @@
         margin-left: 10px;
     }
 </style>
-    <!--Create new product-->
+    <!--Create new customer-->
     <div class="row ml-0 mb-3">
-        <a href="{% url 'products:products_add' %}">
+        <a href="{% url 'products:add_vendor' %}">
             <button type="button" class="btn btn-success font-weight-bold">
                     <i class="fas fa-plus mr-2"></i>
-                    Create new product
+                    Create new vendor
             </button>
         </a>
     </div>
@@ -44,80 +44,31 @@
     <!-- DataTable -->
     <div class="card shadow mb-12">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Products</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Customers</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
-                            <th>ID</th>
                             <th style="width:5%">#</th>
                             <th style="width:20%">Name</th>
-                            <th style="width:25%">Description</th>
-                            <th style="width:15%">Category</th>
-                            <th class="text-center" style="width:15%">Price</th>
-                            <th class="text-center" style="width:10%">Status</th>
-                            <th class="text-center" style="width:10%">Actions</th>
+                            <th style="width:15%">Contact</th>
+                            <th style="width:25%">Adress</th>
+                            <th style="width:25%">Date added</th>
+
                         </tr>
                     </thead>
                     <tbody>
-                        {% for p in products %}
+                        {% for v in vendors %}
                         <tr>
-                            <td>{{p.id}}</td>
                             <td>{{forloop.counter}}</td>
-                            <td>{{p.name}}</td>
-                            <td>{{p.description}}</td>
-                            <td>{{p.category}}</td>
-                            <td class="text-right">Ksh {{p.price}}</td>
-                            {% if p.status == "ACTIVE" %}
-                            <td class="text-center">
-                                <span class="badge badge-success" style="font-size:0.8em;">{{p.status}}</span>
-                            </td>
-                            {% elif p.status == "INACTIVE" %}
-                            <td class="text-center">
-                                <span class="badge badge-danger" style="font-size:0.8em;">{{p.status}}</span>
-                            </td>
-                            {% endif %}
-                            <td class="text-center">
-                                <!--Update-->
-                                <a href="{% url 'products:products_update' p.id %}" class="text-decoration-none">
-                                    <button  type="button" class="btn btn-warning btn-sm" data-bs-toggle="tooltip" title="Update product">
-                                        <i class="fas fa-pen"></i>
-                                    </button>
-                                </a>
-                                <!--Delete modal-->
-                                <!-- Button trigger modal -->
-                                <a class="text-decoration-none">
-                                    <button rel="delete" type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal">
-                                        <i class="fas fa-trash"></i>
-                                    </button>
-                                </a>
-                                    
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Delete product</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div id="updateThisText" class="modal-body">
-                                            
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                            <a href="#" class="text-decoration-none">
-                                            <a id="updateThisURL" href="{% url 'products:products_delete' p.id %}" class="text-decoration-none">
-                                                <button  type="button"  class="btn btn-danger">Delete</button>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    </div>
-                                </div>
-                            </td>
+                            <td>{{v.name}}</td>
+                            <td>{{v.contact_info}}</td>
+                            <td>{{v.address}}</td>
+                            <td>{{v.date_added}}</td>
+
+                           
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -148,7 +99,7 @@
 <script>
     // Call the dataTables jQuery plugin
     $(document).ready(function() {
-        tblProducts = $('#dataTable').DataTable({
+        tblCategories = $('#dataTable').DataTable({
             dom: 'Bfrtip', // Buttons are draw at this element
             buttons: [
                 {
@@ -243,21 +194,19 @@
         });
     });
 
-// Alert when trying to delete a product
-$('#dataTable tbody')
-    // Event when whe try to delete a product
+    // Alert when trying to delete a customer
+    $('#dataTable tbody')
+    // Event when whe try to delete a customer
     // We update the text, and href of the modal delete button
     .on('click', 'button[rel="delete"]', function () {
     // Row variable
-    var tr = tblProducts.cell($(this).closest('td, li')).index();
-    row_data = ( tblProducts.row(tr.row).data());
-    product_id = row_data[0];
-    product_name = row_data[2]
-    new_delete_url  = 'delete/' + product_id;
-    document.getElementById("updateThisText").innerHTML = "Are you sure you want to delete the product:  " + product_name + "?";
+    var tr = tblCategories.cell($(this).closest('td, li')).index();
+    row_data = ( tblCategories.row(tr.row).data());
+    customer_id = row_data[0];
+    customer_name = row_data[2]
+    new_delete_url  = 'delete/' + customer_id;
+    document.getElementById("updateThisText").innerHTML = "Are you sure you want to delete the customer:  " + customer_name + "?";
     document.getElementById("updateThisURL").href=new_delete_url;
     });
-
-
 </script>
 {% endblock javascripts %}
