--- a/django_pos/templates/pos/index.html
+++ b/django_pos/templates/pos/index.html
@@ -40,7 +40,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                            Earnings (Annual)</div>
+                            Earnings (Total)</div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">{{annual_earnings}} $</div>
                     </div>
                     <div class="col-auto">
@@ -107,7 +107,7 @@
             <!-- Card Header - Dropdown -->
             <div
                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <h6 class="m-0 font-weight-bold text-primary">Year Earnings Overview</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Annual Earnings Overview</h6>
             </div>
             <!-- Card Body -->
             <div class="card-body">
@@ -147,21 +147,19 @@
         </div>
     </div>
 
-    <div class="col-xl-12 col-lg-12">
+    <!-- <div class="col-xl-12 col-lg-12">
         <div class="card shadow mb-4">
-            <!-- Card Header - Dropdown -->
             <div
                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">Supply vs Demand Statistics</h6>
             </div>
-            <!-- Card Body -->
             <div class="card-body">
                 <div class="chart-area">
                     <canvas id="myAreaChart"></canvas>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 {% endblock content %}
 
