--- a/django_pos/templates/products/products_add.html
+++ b/django_pos/templates/products/products_add.html
@@ -62,7 +62,13 @@
                         <label for="inputPrice">Price</label>
                         <input type="number" name="price" step="any"  class="form-control" placeholder="10.99" required>
                     </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputCapacity">Capacity</label>
+                        <input type="text" name="capacity" step="any"  class="form-control" placeholder="300ml, 500ml..." required>
+                    </div>
+                    
                 </div>
+                   
                 
 
                 <button type="submit" class="btn btn-success font-weight-bold">Create product</button>
