--- a/django_pos/templates/products/reports.html
+++ b/django_pos/templates/products/reports.html
@@ -19,7 +19,7 @@
 
 </style>
 <div class="row">
-    <div class="col-md-4 mb-4">
+    <!-- <div class="col-md-4 mb-4">
         <a class="card-link" href="{% url 'products:employee_reports' %}">
             <div class="card">
                 <div class="card-header">
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </a>
-    </div>
+    </div> -->
 
     <div class="col-md-4 mb-4">
         <a class="card-link" href="{% url 'products:daily_reports' %}">
@@ -60,12 +60,12 @@
                     <p class="card-text">Reports on current stock levels and inventory management.</p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Updated 15 mins ago</small>
+                    <small class="text-muted"></small>
                 </div>
             </div>
         </a>
     </div>
-    <div class="col-md-4 mb-4">
+    <!-- <div class="col-md-4 mb-4">
         <a class="card-link" href="{% url 'products:bp_vs_sl_reports' %}">
             <div class="card">
                 <div class="card-header">
@@ -94,6 +94,6 @@
                 </div>
             </div>
         </a>
-    </div>
+    </div> -->
 </div>
 {% endblock content %}
