--- a/django_pos/templates/sales/sales_receipt_pdf.html
+++ b/django_pos/templates/sales/sales_receipt_pdf.html
@@ -18,7 +18,7 @@
         }
 
         .name-company {
-            font-size: 25px;
+            font-size: 22px;
             <!--
                 padding: 0;
                 margin: 0;
@@ -53,10 +53,10 @@
 <div class="container-fluid">
     <div class="row border border-dark">
         <div class="col-6">
-            <p class="name-company"><b>E-Corp</b></p>
-            <p><b>135 East 57th Street</b></p>
-            <p><b>New York, NY 10011, USA</b></p>
-            <p><b>Phone:</b> (213) 484-6829</p>
+            <p class="name-company"><b>Intellima</b></p>
+            <p><b>78, Riara Road </b></p>
+            <p><b>Nairobi, NY 10011, Kenya</b></p>
+            <p><b>Phone:</b> 0728608551</p>
         </div>
         <div class="col-6 border-left border-dark">
             <p><b>Date:</b> {{sale.date_added}}</p>
@@ -111,7 +111,7 @@
         <tr>
             <td colspan="5">
                 <p class="text-uppercase font-weight-bold text-center">
-                    Thank you for your preference!
+                    Thank you for choosing us!
                 </p>
             </td>
         </tr>
