--- a/django_pos/templates/pos/sidebar.html
+++ b/django_pos/templates/pos/sidebar.html
@@ -33,8 +33,6 @@
             <div class="bg-white py-2 collapse-inner rounded">
                 <a class="{% if "categories" in active_icon %} collapse-item active {% else %} collapse-item {% endif %}" href="{% url 'products:categories_list' %}">Categories</a>
                 <a class="{% if "products_products" in active_icon %} collapse-item active {% else %} collapse-item {% endif %}" href="{% url 'products:products_list' %}">Products</a>
-                <a class="{% if "products_products" in active_icon %} collapse-item active {% else %} collapse-item {% endif %}" href="{% url 'products:products_list' %}"> Items to Reorde</a>
-
             </div>
         </div>
     </li>
@@ -61,6 +59,11 @@
         <a class="nav-link" href="{% url 'authentication:employee_list' %}">
             <i class="fas fa-fw fa-users"></i>
             <span>Employees</span></a>
+    </li>
+    <li class="{% if "customers" in active_icon %} nav-item active {% else %} nav-item {% endif %}">
+        <a class="nav-link" href="{% url 'products:vendors_list' %}">
+            <i class="fas fa-fw fa-users"></i>
+            <span>Vendors</span></a>
     </li>
     <li class="{% if "customers" in active_icon %} nav-item active {% else %} nav-item {% endif %}">
         <a class="nav-link" href="{% url 'customers:customers_list' %}">
