--- a/django_pos/templates/products/add_vendor.html
+++ b/django_pos/templates/products/add_vendor.html
@@ -22,6 +22,14 @@
                         <label for="inputName">Name</label>
                         <input type="text" class="form-control" name="name" placeholder="Enter Vendor Name" required>
                     </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputContactInfo">Contact info</label>
+                        <input type="text" class="form-control" name="contact_info" placeholder="Enter Vendor Name" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputAddress">Address</label>
+                        <input type="text" class="form-control" name="address" placeholder="Enter Vendor Name" required>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-success font-weight-bold">Add Vendor</button>
             </form>
