--- a/django_pos/templates/products/purchase_list.html
+++ b/django_pos/templates/products/purchase_list.html
@@ -15,6 +15,22 @@
 
 <!-- Page content  -->
 {% block content %}
+<style>
+    .dataTables_wrapper .dt-buttons .btn {
+        margin-bottom: 20px; /* Add margin-bottom to buttons */
+        padding: 0.1rem 0.5rem; /* Make buttons smaller */
+    }
+    .dataTables_filter {
+        margin-top: 5px; /* Add margin-top to search bar */
+    }
+    .dataTables_filter input {
+        width: 200px; /* Adjust width of search input for a more professional look */
+        border-radius: 5px; /* Add border radius for smoother corners */
+        border: 1px solid #ddd; /* Light border color */
+        padding: 0.2rem; /* Padding inside the search input */
+        margin-left: 10px;
+    }
+</style>
     <!--Create new purchase-->
     <div class="row ml-0 mb-3">
         <a href="{% url 'products:add_purchase' %}">
