--- a/django_pos/templates/sales/sales.html
+++ b/django_pos/templates/sales/sales.html
@@ -15,7 +15,22 @@
 
 <!-- Page content  -->
 {% block content %}
-
+<style>
+    .dataTables_wrapper .dt-buttons .btn {
+        margin-bottom: 20px; /* Add margin-bottom to buttons */
+        padding: 0.1rem 0.5rem; /* Make buttons smaller */
+    }
+    .dataTables_filter {
+        margin-top: 5px; /* Add margin-top to search bar */
+    }
+    .dataTables_filter input {
+        width: 200px; /* Adjust width of search input for a more professional look */
+        border-radius: 5px; /* Add border radius for smoother corners */
+        border: 1px solid #ddd; /* Light border color */
+        padding: 0.2rem; /* Padding inside the search input */
+        margin-left: 10px;
+    }
+</style>
     <!--Create new sale-->
     <div class="row ml-0 mb-3">
         <a href="{% url 'sales:sales_add' %}">
@@ -50,7 +65,7 @@
                             <td>{{forloop.counter}}</td>
                             <td>{{s.date_added}}</td>
                             <td>{{s.customer.get_full_name}}</td>
-                            <td class="text-right" >{{s.grand_total}}</td>
+                            <td class="text-right" >Ksh {{s.grand_total}}</td>
                             <td class="text-center" >{{s.sum_items}}</td>
                             <td class="text-center">
                                 <!--View-->
